--- a/CookBook/CookBook.csproj
+++ b/CookBook/CookBook.csproj
@@ -199,6 +199,7 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\images\food12 transparent.jpg" />
     <Content Include="Content\jquery-ui.min.css" />
     <Content Include="Content\PagedList.css" />
     <Content Include="favicon.ico" />
